Improving styling and adding search route

--- a/clothes/templates/clothes/index.html
+++ b/clothes/templates/clothes/index.html
@@ -43,6 +43,14 @@ JOSRAM
         object-fit: cover;
     }
 }
+
+#destacate {
+    margin: 1rem auto 3rem auto;
+    padding: 2rem;
+    background-color: rgb(0, 0, 0);
+    justify-content: center;
+}
+
 </style>
 {% include "clothes/includes/style.html" %}
 {% endblock %}
@@ -69,10 +77,10 @@ JOSRAM
   </button>
 </div>
 
-<section id="nuevo">
+<section id="destacate">
     <div>
-        <h1> Destacados </h1>
-        <p>Una colección que te acomapañará en todo momento.</p>
+        <h1 style="color:white;"> Destacados </h1>
+        <p style="color:white;">Una colección que te acomapañará en todo momento.</p>
     </div>
     
       <div class="row">
