--- a/clothes/templates/clothes/clothes-details.html
+++ b/clothes/templates/clothes/clothes-details.html
@@ -144,6 +144,21 @@
     background-color: white;
     justify-content: center;
 }
+
+.text-justify {
+    text-align: justify;
+}
+
+.size-image-small {
+    width: 100%;
+    height: auto;
+}
+
+@media (max-width: 768px) {
+    .btn {
+        width: 100% !important;
+    }
+}
 </style>
 {% endblock %}
 
@@ -151,11 +166,10 @@
 
 <section id="details">
     <div class="row featurette" style="justify-content: center; margin: 0 0.5rem 0 0.5rem;">
-
-        <div class="col-md-5 order-md-1 justify-content-center align-items-center" >
+        <div class="col-md-5 order-md-1 justify-content-center align-items-center">
             <img id="main-image" src="{{ color_clothes.0.main_image.url }}" class="card-img-top" alt="..." onclick="openModal()">
             <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-inner  d-flex">
+                <div class="carousel-inner d-flex">
                     {% for photo in color_clothes %}
                     <div class="carousel-item {% if forloop.first %}active{% endif %}">
                         <ul class="miniaturas">
@@ -196,96 +210,87 @@
             </div>
         </div>
 
-              <!-- Modal -->
-<div id="imageModal" class="modal" onclick="closeModal()">
-    <span class="close">&times;</span>
-    <img class="modal-content" id="modal-image">
-</div>
-        
-       
+        <!-- Modal -->
+        <div id="imageModal" class="modal" onclick="closeModal()">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="modal-image">
+        </div>
 
-        <div class="col-md-5 order-md-1" style= "margin-left: 50px; ">
+        <div class="col-md-5 order-md-1 mx-auto">
             <div>
                 <span>JOSRAM</span>
-                <h2 >{{clothe_details.name|title}} </h2>
-            </div>
-
-            <div class="py-2 display: flex;">
-                {% load custom_filters %}
-                <h4 class="lead"> {{clothe_details.price|currency}} COP 
-                {% if not size_clothes.in_stock %}
-                <span class="span-stock">Agotado</span></h4>
-                {% endif %}
-                
+                <h2>{{ clothe_details.name|title }}</h2>
             </div>
 
             <div class="py-2">
-                <form action="{% url "clothes-details" clothe_details.slug %}" method="POST">
+                {% load custom_filters %}
+                <h4 class="lead"> {{ clothe_details.price|currency }} COP 
+                {% if not size_clothes.in_stock %}
+                <span class="span-stock">Agotado</span></h4>
+                {% endif %}
+            </div>
+
+            <div class="py-2">
+                <form action="{% url 'clothes-details' clothe_details.slug %}" method="POST">
                     {% csrf_token %}
-                       <h4 class="mt-2"> {{ form.size.label_tag }} </h4>
-                      <!-- Mostrar las opciones de tallas -->
-                      <div>
+                    <h4 class="mt-2">{{ form.size.label_tag }}</h4>
+                    <!-- Mostrar las opciones de tallas -->
+                    <div>
                         {% for radio in form.size %}
-                            <label class="radio-inline btn btn-color btn-outline-dark rounded-pill px-3" >
-                                {{ radio }} 
-                            </label>
+                        <label class="radio-inline btn btn-color btn-outline-dark rounded-pill px-3">
+                            {{ radio }}
+                        </label>
                         {% endfor %}
                     </div>
-                    <h4 class="mt-2"> {{ form.color.label_tag }} </h4>
+                    <h4 class="mt-2">{{ form.color.label_tag }}</h4>
                     <!-- Mostrar las opciones de colores -->
-                    <div >
-                       
+                    <div>
                         {% for radio in form.color %}
-                            <label class="radio-hidden btn btn-color btn-outline-dark rounded-pill px-3 {% if radio.errors %} errors {% endif %}" >
-                                {{ radio }} 
-                                {{ radio.errors }}
-                            </label>
+                        <label class="radio-hidden btn btn-color btn-outline-dark rounded-pill px-3 {% if radio.errors %} errors {% endif %}">
+                            {{ radio }}
+                            {{ radio.errors }}
+                        </label>
                         {% endfor %}
                     </div>
-            
+
                     <h4 class="mt-2">{{ form.cant.label_tag }}</h4>
-                    
-                    <!--<span> {{size_clothes.cant}} en inventario/Carrito - id:{{size_clothes.pk}}</span>-->
-                    
-                    <div class="py-2" >
+                    <div class="py-2">
                         <label id="quantity" style="border-radius: 50%;">
-                            
-                        {{ form.cant }}
+                            {{ form.cant }}
                         </label>
                     </div>
-                    
 
                     {% if not is_enough %}
                     <span style="font-style: italic;">
-                        <i class="bi bi-exclamation-circle" ></i>
-                        <svg style="color:red;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-circle" viewBox="0 0 16 16" style="color:red">
+                        <i class="bi bi-exclamation-circle"></i>
+                        <svg style="color:red;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                             <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
                         </svg>
-                      No puedes agregar más {{clothe_details.name|title}} a la compra. 
+                        No puedes agregar más {{ clothe_details.name|title }} a la compra.
                     </span>
                     {% else %}
                     <span style="font-style: italic;">
-                        <i class="bi bi-exclamation-circle" ></i>
+                        <i class="bi bi-exclamation-circle"></i>
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-circle" viewBox="0 0 16 16" style="color:green">
-                        <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
-                        <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
+                            <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
+                            <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
                         </svg>
-                      Hay {{clothe_details.name|title}} disponible!
+                        Hay {{ clothe_details.name|title }} disponible!
                     </span>
                     {% endif %}
-                    <div class="py-2">
-                    <button class="btn btn-warning rounded-pill" type="submit" name="verify">Verificar stock</button>
+                    <div class="py-2 ">
+                        <button class="btn btn-warning rounded-pill mb-2" type="submit" name="verify">Verificar stock</button>
                     </div>
-                    </form>
-                
+                </form>
+
                 {% if not added_cart %}
                 <span style="font-style: italic;">
-                    <i class="bi bi-exclamation-circle" ></i>
+                    <i class="bi bi-exclamation-circle"></i>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-plus-fill" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5z"/>
                     </svg>
-                  Se agregó {{clothe_details.name|title}} al carrito. 
+                    Se agregó {{ clothe_details.name|title }} al carrito.
                 </span>
                 {% endif %}
 
@@ -297,52 +302,51 @@
                         alert("{{ message }}"); // Example: using a simple JavaScript alert
                     {% endfor %}
                 </script>
-            {% endif %}
+                {% endif %}
 
-                {% if not is_enough or not size_clothes.in_stock%}
-                        <div class="py-2">
-                            <button type="submit" name="proceed_to_checkout" class="btn btn-outline-dark rounded-pill mt-2 disabled" style="width:400px">Sin stock</button>
-                        </div>
-                <div class="py-2">
-                    <button type="submit" name="add_to_cart" class="btn btn-dark rounded-pill disabled" style="width:400px">Agregar al carrito</button>
+                {% if not is_enough or not size_clothes.in_stock %}
+                <div class="py-2 text-center">
+                    <button type="submit" name="proceed_to_checkout" class="btn btn-outline-dark rounded-pill mt-2 w-100 disabled">Sin stock</button>
                 </div>
-
+                <div class="py-2 text-center">
+                    <button type="submit" name="add_to_cart" class="btn btn-dark rounded-pill w-100 disabled">Agregar al carrito</button>
+                </div>
                 {% else %}
-                <form action="{% url "cheackout-buy"  %}" method="POST">
+                <form action="{% url 'cheackout-buy' %}" method="POST">
                     {% csrf_token %}
-                        <div class="py-2">
-                            <input type="hidden" value="{{ form.cant.value }}" name="sizes_clothes_cant">
-                            <input type="hidden" value="{{ size_clothes.pk }}" name="sizes_clothes_pk">
-                            <button type="submit" name="proceed_to_checkout" class="btn btn-outline-dark rounded-pill mt-2 " style="width:400px">Ir a comprar</button>
-                        </div>
+                    <div class="py-2 text-center">
+                        <input type="hidden" value="{{ form.cant.value }}" name="sizes_clothes_cant">
+                        <input type="hidden" value="{{ size_clothes.pk }}" name="sizes_clothes_pk">
+                        <button type="submit" name="proceed_to_checkout" class="btn btn-outline-dark rounded-pill mt-2 w-100">Ir a comprar</button>
+                    </div>
                 </form>
-                <form action="{% url "your-cart" %}" method="POST">
+                <form action="{% url 'your-cart' %}" method="POST">
                     {% csrf_token %}
-                <div class="py-2">
-                    <input type="hidden" value="{{ form.cant.value }}" name="sizes_clothes_cant">
-                    <input type="hidden" value="{{ size_clothes.pk }}" name="sizes_clothes_pk">
-                    <button type="submit" name="add_to_cart" class="btn btn-dark rounded-pill" style="width:400px">Agregar al carrito</button>
-                </div>
+                    <div class="py-2 text-center">
+                        <input type="hidden" value="{{ form.cant.value }}" name="sizes_clothes_cant">
+                        <input type="hidden" value="{{ size_clothes.pk }}" name="sizes_clothes_pk">
+                        <button type="submit" name="add_to_cart" class="btn btn-dark rounded-pill w-100">Agregar al carrito</button>
+                    </div>
                 </form>
                 {% endif %}
 
-                
+                <div class="py-2">
+                    <p class="text-justify" style="font-family: 'Lato', sans-serif;">
+                        {{ clothe_details.description }}
+                    </p>
+                </div>
 
-    
-            <div class="py-2">
-                <p style="text-align: justify; font-family: 'Lato', sans-serif;">
-                  {{clothe_details.description }}
-                </p>
+                <div class="text-center">
+                    <a href="mailto:kaacuna20@gmail.com">
+                        <button type="button" class="btn btn-outline-primary">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
+                                <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"></path>
+                            </svg>
+                            Compartir
+                        </button>
+                    </a>
+                </div>
             </div>
-            
-              <a href="mailto:kaacuna20@gmail.com">
-                <button type="button" class="btn btn-outline-primary">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-share" viewBox="0 0 16 16">
-                    <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"></path>
-                    </svg>
-                    Compartir
-                </button> 
-            </a>
         </div>
     </div>
 </section>
@@ -461,7 +465,7 @@
 
 <!-- JavaScript para el desplazamiento del carrusel -->
 
-
 {% include "clothes/follow.html" %}
+
 {% endblock %}
 
