--- a/clothes/templates/clothes/includes/footers.html
+++ b/clothes/templates/clothes/includes/footers.html
@@ -2,17 +2,20 @@
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     
-    <div class="d-flex col-md-4 justify-content-start">
-      <span id="current-year" class="mb-3 mb-md-0 text-body-secondary">© <span id="year"></span> <a href="{% url 'start-page' %}">JOSRAM</a> - <a href="#">kaacuna</a></span>
+    <div class="col-md-4 d-flex justify-content-start">
+      <span id="current-year" class="mb-3 mb-md-0 text-body-secondary">
+        © <span id="year"></span> 
+        <a href="{% url 'start-page' %}">JOSRAM</a> - <a href="#">kaacuna</a>
+      </span>
     </div>
 
-    <div class="d-flex col-md-4 justify-content-center">
+    <div class="col-md-4 d-flex justify-content-center">
       <a href="/" class="d-flex align-items-center justify-content-center mb-3 mb-md-0 link-body-emphasis text-decoration-none">
         <img src="{% static 'clothes/images/logo1.jpg' %}" alt="JOSRAM-LOGO" width="140" height="37.69807280513919" sizes="(max-width: 280px) 50vw, 140px">
       </a>
     </div>
 
-    <div class="d-flex col-md-4 justify-content-end">
+    <div class="col-md-4 d-flex justify-content-end">
       <ul class="nav list-unstyled d-flex">
         <li class="ms-3">
           <a class="text-body-secondary" href="https://www.instagram.com/josram.col/">
