--- a/cart/static/cart/checkout.css
+++ b/cart/static/cart/checkout.css
@@ -1,6 +1,6 @@
 #main {
     margin: 1rem auto 3rem auto;
-    padding: 5rem;
+    padding: 0;
     background-color: rgb(247, 246, 246);
     justify-content: center;
 }
