Adding Blog app and fixing some styles

--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -183,26 +183,21 @@ sección de pago
                         <h5 class="card-title">Métodos de pago disponibles</h5>
                     </div>
                     <div class="card-body">
-                        <div class="row">
-                            <div class="col-6 col-md-4 col-lg-2">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-6 col-md-4 col-lg-2 d-flex justify-content-center">
                                 <i class="payment-icon fab fa-cc-visa"></i>
-                                <div class="payment-title">Visa</div>
                             </div>
-                            <div class="col-6 col-md-4 col-lg-2">
+                            <div class="col-6 col-md-4 col-lg-2 d-flex justify-content-center">
                                 <i class="payment-icon fab fa-cc-mastercard"></i>
-                                <div class="payment-title">Mastercard</div>
                             </div>
-                            <div class="col-6 col-md-4 col-lg-2">
+                            <div class="col-6 col-md-4 col-lg-2 d-flex justify-content-center">
                                 <i class="payment-icon fab fa-cc-amex"></i>
-                                <div class="payment-title">American Express</div>
                             </div>
-                            <div class="col-6 col-md-4 col-lg-2">
+                            <div class="col-6 col-md-4 col-lg-2 d-flex justify-content-center mt-2">
                                 <img src="https://http2.mlstatic.com/frontend-assets/mp-web-navigation/ui-navigation/6.7.12/mercadopago/logo__large.png" alt="MercadoPago" class="payment-icon img-fluid">
-                                <div class="payment-title">MercadoPago</div>
                             </div>
-                            <div class="col-6 col-md-4 col-lg-2">
-                                <img src="https://www.pse.com.co/image/layout_icon?img_id=1202326" alt="PSE" class="payment-icon img-fluid">
-                                <div class="payment-title">PSE</div>
+                            <div class="col-6 col-md-4 col-lg-2 d-flex justify-content-center">
+                                <img src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/082017/untitled-2_15.png?itok=5Wj0ru82" alt="PSE" class="payment-icon img-fluid">
                             </div>
                         </div>
                     </div>
