--- a/clothes/templates/clothes/includes/header.html
+++ b/clothes/templates/clothes/includes/header.html
@@ -98,10 +98,21 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link" href="{% url 'josram-blog' %}">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'all-products' %}">Todos los productos</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Políticas
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Política de cambios y devoluciones</a></li>
+                                <li><a class="dropdown-item" href="#">Política de privacidad</a></li>
+                                <li><a class="dropdown-item" href="#">Política de envíos</a></li>
+                                <li><a class="dropdown-item" href="#">Términos y condiciones</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
