fixing any bugs and styles

--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -58,7 +58,7 @@
                                 {{ form_field.errors }}
                             </div>
                             {% endfor %}
-                            <button type="submit" name="comment" class="btn btn-secondary mt-2 mx-2">Comentar</button>  
+                            <button class="btn btn-secondary mt-2 mx-2">Comentar</button>  
                         </form>
                     </div>     
                                
