--- a/cart/templates/cart/my-cart.html
+++ b/cart/templates/cart/my-cart.html
@@ -48,7 +48,7 @@ Tu carrito - JOSRAM
                                     <tr>
                                         <td class="col-md-3 col-sm-12 align-middle">
                                             <div class="col-auto d-lg-block">
-                                                <img src="{{ clothe.img }}" class="img-fluid mx-auto d-block" alt="..." style="width: 100px; height: auto; border-radius:8px;">
+                                                <img src="{{ clothe.img }}" class="img-fluid mx-auto d-block" alt="{{ clothe.name }}" style="width: 100px; height: auto; border-radius:8px;">
                                             </div>
                                         </td>
                                         <td class="col-md-3 col-sm-12 align-middle">
@@ -65,11 +65,13 @@ Tu carrito - JOSRAM
                                             <div class="p-4 d-flex justify-content-center align-items-center">
                                                 <form method="post" class="d-flex align-items-center" action="{% url 'your-cart'%}">
                                                     {% csrf_token %}
+                                                    <input type="submit" value="-" name="minus" class="btn btn-dark">
                                                     <input type="number" id="cant_product_{{ clothe.size_pk }}" name="cant_product"
                                                            value="{{ clothe.quantity }}" min="1" readonly class="form-control text-center" style="width: 60px;">
+                                                    <input type="submit" value="+" name="plus" class="btn btn-dark ">
                                                     <input type="hidden" value="{{ clothe.size_pk }}" name="sizes_pk">
-                                                    <input type="hidden" value="{{ clothe.quantity }}" name="sizes_cant">
-                                                    <button class="btn btn-danger rounded-pill ms-2">
+                                                  
+                                                    <button class="btn btn-danger rounded-pill ms-2" type="submit" name="delete">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                                                             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
                                                             <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
