--- a/clothes/templates/clothes/includes/header-filter.html
+++ b/clothes/templates/clothes/includes/header-filter.html
@@ -91,11 +91,8 @@
               </ul>
             </div>
           </li>
-        </ul>
-
-        <!-- Order By Section at the end -->
-        <ul class="nav nav-pills ms-auto">
-          <li class="nav-item dropdown">
+  
+          <li class="nav-item dropdown" style="padding-left:500px;">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Ordenar por:
             </a>
